@@ -8,6 +8,8 @@ v0.7.0 not-yet-released
 	one polymer type is converted into another. 	LS
 	* CMake python. Identify suitable python
 	environment via CMake				LS
+	* assign each polymer a unique tag
+	  the tag remains constant between runs         LS
 	* Enabling CUDA aware MPI and NCCL              LS
 
 v0.6.2 not-yet-released
